# llm-code-patcher

./: .gitignore  DISCLAIMER  antlr-generate.sh  requirements.txt
cmake_example/: CMakeLists.txt  ExtractHeaderInfo.mjs  ExtractSymbols.mjs  SeparateFunctions.mjs  example.c  example.c_bar.c  example.c_foo.c  test.clava
codellama/: .gitignore  install.sh
codellama/llama/: generation.py
experiments/: antlr-generate.sh  declaration.py  error.py  experiments.py  init_experiment.py  run_experiments.py  utils.py
experiments/antlr/: Declaration.g4
experiments/declparser/: Declaration.interp  Declaration.tokens  DeclarationLexer.interp  DeclarationLexer.py  DeclarationLexer.tokens  DeclarationListener.py  DeclarationParser.py
experiments/doom_id-software/: project.json
experiments/linux/: project.json
experiments/nginx_nginx/: project.json
experiments/openssl/: project.json
experiments/prompts/: prompt_c.md
experiments/raw_results/: am_map_2_DOOM_id-Software_1710378809.json  am_map_6_DOOM_id-Software_1710378878.json  g_game_2_DOOM_id-Software_1710378896.json  g_game_3_DOOM_id-Software_1710378904.json  i_video_2_DOOM_id-Software_1710378934.json  (+1 more)
prompts/: prompt_c.md
raw_results/: am_map_1_DOOM_id-Software_1710378800.json  am_map_3_DOOM_id-Software_1710378828.json  am_map_4_DOOM_id-Software_1710378850.json  am_map_5_DOOM_id-Software_1710378865.json  g_game_1_DOOM_id-Software_1710378888.json  i_video_1_DOOM_id-Software_1710378914.json
src/: declaration.py  decls.txt  evaluation.py  experiments.py  llm.py  logger.py  utils.py
(+70 files in other folders)
